[project]
name = "pysaga"
version = "0.1.0"
description = ""
authors = [
    {name = "Yida Liu",email = "yxl1372@case.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "imutils (>=0.5.4,<0.6.0)",
    "imagehash (>=4.3.2,<5.0.0)",
]

[tool.poetry]
packages = [{include = "pysaga", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = "^4.3.0"
pyinstaller = "^6.15.0"


[tool.poetry.scripts]
build-executable = "scripts.build:build"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
